# sirius

./: .gitignore  CMakeLists.txt
include/math/: summator.hpp
src/: CMakeLists.txt  main.cpp
src/math/: summator.cpp
test/: CMakeLists.txt
